--- a/front/package.json
+++ b/front/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "build-css": "tailwindcss build  styles/styles.css -o public/styles.css",
     "start": "next start",
     "lint": "next lint"
   },
@@ -13,7 +14,7 @@
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "styled-components": "^5.3.5"
+    "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
     "eslint": "8.23.0",
