--- a/front/package.json
+++ b/front/package.json
@@ -10,8 +10,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.8",
     "babel-plugin-styled-components": "^2.0.7",
     "next": "12.2.5",
+    "postcss": "^8.4.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "^3.1.8"
